@@ -1,0 +1,50 @@
+robot:
+  name: niryo_one
+  links:
+    # Base (J1)
+    - id: 0
+      length: 0.103  # Altura de la base
+      type: revolute
+      link_orientation: [0, 0, 1]  # Eje Z
+      joint_coords: [0, 0, 0]
+      joint_axis: [0, 0, 1]  # Rotación alrededor de Z
+
+    # Brazo (J2)
+    - id: 1
+      length: 0.080  # Longitud del brazo
+      type: revolute
+      link_orientation: [0, 1, 0]  # Eje Y
+      joint_coords: [0, 0, 0.103]  # Posición relativa a la base
+      joint_axis: [0, -1, 0]  # Rotación alrededor de -Y (según PDF)
+
+    # Codo (J3)
+    - id: 2
+      length: 0.210  # Longitud del antebrazo
+      type: revolute
+      link_orientation: [0, 1, 0]  # Eje Y
+      joint_coords: [0, 0, 0.080]  # Posición relativa al brazo
+      joint_axis: [0, -1, 0]  # Rotación alrededor de -Y
+
+    # Muñeca (J4)
+    - id: 3
+      length: 0.030  # Longitud del segmento de muñeca
+      type: revolute
+      link_orientation: [0, 1, 0]  # Eje Y
+      joint_coords: [0, 0, 0.210]  # Posición relativa al codo
+      joint_axis: [0, -1, 0]  # Rotación alrededor de -Y
+
+    # Rotación muñeca (J5)
+    - id: 4
+      length: 0.0415  # Distancia hasta la pinza
+      type: revolute
+      link_orientation: [1, 0, 0]  # Eje X
+      joint_coords: [0.0415, 0, 0.030]  # Posición relativa a la muñeca
+      joint_axis: [1, 0, 0]  # Rotación alrededor de X
+
+    # Pinza (J6)
+    - id: 5
+      length: 0.180  # Longitud de la pinza
+      type: revolute
+      link_orientation: [0, 0, 1]  # Eje Z
+      joint_coords: [0.180, 0, -0.0055]  # Posición relativa a la rotación de muñeca
+      joint_axis: [0, 0, 1]  # Rotación alrededor de Z
